@@ -35,6 +35,7 @@ Version 2.2.0
    - Feature: Control gnubiff via USR1 and USR2 signal
    - Bugfix: Creating properties line in expert dialog
    - Bugfix: Creating allowed values line in expert dialog
+   - Feature: Catch some additional signals and give an error message
  * Roland Stigge
    - Added reference to info pages in man page (Debian bug #335193)
 
